test/tests/errors/error-ref-no-func.sm
// true
// false
// false
/**/
/**/

program {
    func x(y: int): int {
        y
    }

    var z: ref func(int) int = ref x;
}